Bug 387337 - loss of data warnings with ImportFileDialog
Summary: loss of data warnings with ImportFileDialog
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-27 00:26 UTC by uwestoehr
Modified: 2017-11-29 07:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-27 00:26:41 UTC
I get:

3>C:\CraftRoot\labplot\src\kdefrontend\datasources\ImportFileDialog.cpp(364): warning C4242: 'argument': conversion from 'int' to 'quint16', possible loss of data
3>C:\CraftRoot\labplot\src\kdefrontend\datasources\ImportFileDialog.cpp(364): warning C4365: 'argument': conversion from 'int' to 'quint16', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\kdefrontend\datasources\ImportFileDialog.cpp(389): warning C4242: 'argument': conversion from 'int' to 'quint16', possible loss of data
3>C:\CraftRoot\labplot\src\kdefrontend\datasources\ImportFileDialog.cpp(389): warning C4365: 'argument': conversion from 'int' to 'quint16', signed/unsigned mismatch
Comment 1 Alexander Semke 2017-11-29 07:17:17 UTC
Git commit b92a4d5cb2317f9382c3e775c386490039c3eefb by Alexander Semke.
Committed on 29/11/2017 at 07:16.
Pushed by asemke into branch 'master'.

Fixed signed/unsigned int conversion in ImportFileDialog.
FIXED-IN: 2.5

M  +2    -2    src/kdefrontend/datasources/ImportFileDialog.cpp

https://commits.kde.org/labplot/b92a4d5cb2317f9382c3e775c386490039c3eefb