Fixed signed/unsigned int conversion in ImportFileDialog.

BUG: 387337
FIXED-IN: 2.5